RESOLVED FIXED167630
REGRESSION (r209411): Scrolling to a fragment identifier in overflow:scroll inside position:fixed no longer works
https://bugs.webkit.org/show_bug.cgi?id=167630
Summary REGRESSION (r209411): Scrolling to a fragment identifier in overflow:scroll i...
Simon Fraser (smfr)
Reported 2017-01-30 22:40:38 PST
REGRESSION (r209411): Scrolling to a fragment identifier in overflow:scroll inside position:fixed no longer works
Attachments
Patch (5.95 KB, patch)
2017-01-30 22:42 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2017-01-30 22:42:32 PST
Simon Fraser (smfr)
Comment 2 2017-01-30 22:42:57 PST
WebKit Commit Bot
Comment 3 2017-01-31 08:11:02 PST
Comment on attachment 300189 [details] Patch Clearing flags on attachment: 300189 Committed r211433: <http://trac.webkit.org/changeset/211433>
WebKit Commit Bot
Comment 4 2017-01-31 08:11:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.