REGRESSION (r209411): Scrolling to a fragment identifier in overflow:scroll inside position:fixed no longer works https://bugs.webkit.org/show_bug.cgi?id=167630 rdar://problem/30091558

Reviewed by Zalan Bujtas.
Source/WebCore:

r209411 added special handling for scrolling inside position:fixed, but cut off all scrolling, breaking
overflow:scroll inside position:fixed. Fix by only handling the position:fixed case when we get to
the root layer, which is where we scroll the document.

Test: fast/overflow/scroll-anchor-in-overflow-in-position-fixed.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::getRectToExpose):

LayoutTests:

* fast/overflow/scroll-anchor-in-overflow-in-position-fixed-expected.txt: Added.
* fast/overflow/scroll-anchor-in-overflow-in-position-fixed.html: Added.


Canonical link: https://commits.webkit.org/184672@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211433 268f45cc-cd09-0410-ab3c-d52691b4dbfc